src/test/ui/moves-based-on-type-block-bad.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/moves-based-on-type-block-bad.rs:37:28
   |
LL |                 box E::Bar(x) => println!("{}", x.to_string()),
   |                            ^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
